include bounds and intervals

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,11 @@
     "cSpell.words": [
         "Biconditional",
         "Haha",
+        "infimum",
         "injective",
         "Irreflexivity",
         "parametrised",
+        "supremum",
         "surjective"
     ]
 }
