Complete Chapter 3 and correct some errors.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,18 @@
 {
     "cSpell.words": [
         "Biconditional",
+        "bijections",
         "Haha",
         "infimum",
         "injective",
+        "injectivity",
         "Irreflexivity",
+        "multivalued",
         "parametrised",
+        "Preimage",
+        "preimages",
         "supremum",
-        "surjective"
+        "surjective",
+        "Surjectivity"
     ]
 }
