--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "Biconditional",
         "bijections",
         "Haha",
+        "Huayi",
         "infimum",
         "injective",
         "injectivity",
