include order completeness

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,18 +2,22 @@
     "cSpell.words": [
         "Biconditional",
         "bijections",
+        "equipotent",
         "Haha",
         "Huayi",
         "infimum",
         "injective",
         "injectivity",
         "Irreflexivity",
+        "Knaster",
         "multivalued",
+        "Neille",
         "parametrised",
         "Preimage",
         "preimages",
         "supremum",
         "surjective",
-        "Surjectivity"
+        "Surjectivity",
+        "Tarski"
     ]
 }
