--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,32 @@
 {
     "cSpell.words": [
+        "abelian",
         "Biconditional",
         "bijections",
+        "bijective",
+        "cancellative",
+        "communitative",
+        "compositon",
         "equipotent",
         "Haha",
+        "Hamitonian",
         "Huayi",
         "infimum",
         "injective",
         "injectivity",
         "Irreflexivity",
         "Knaster",
+        "monoid",
+        "monoids",
+        "multiplicatively",
         "multivalued",
         "Neille",
         "parametrised",
         "Preimage",
         "preimages",
+        "semigroup",
+        "submonoid",
+        "subsemigroup",
         "supremum",
         "surjective",
         "Surjectivity",
