include substructure and homomophism

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,11 +10,14 @@
         "equipotent",
         "Haha",
         "Hamitonian",
+        "Homomophism",
+        "homomophisms",
         "Huayi",
         "infimum",
         "injective",
         "injectivity",
         "Irreflexivity",
+        "isomonophism",
         "Knaster",
         "monoid",
         "monoids",
@@ -25,8 +28,11 @@
         "Preimage",
         "preimages",
         "semigroup",
+        "semigroups",
         "submonoid",
+        "submonoids",
         "subsemigroup",
+        "subsemigroups",
         "supremum",
         "surjective",
         "Surjectivity",
