--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "abelian",
+        "Bézout",
         "Biconditional",
         "bijections",
         "bijective",
