--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,6 +37,8 @@
         "supremum",
         "surjective",
         "Surjectivity",
-        "Tarski"
+        "Tarski",
+        "Yigeng",
+        "Zhao"
     ]
 }
