--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "cancellative",
         "communitative",
         "compositon",
+        "eigen",
         "equipotent",
         "Haha",
         "Hamitonian",
@@ -39,6 +40,7 @@
         "surjective",
         "Surjectivity",
         "Tarski",
+        "wavefunction",
         "Yigeng",
         "Zhao"
     ]
