--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,6 +34,7 @@
         "submonoid",
         "submonoids",
         "subring",
+        "subrings",
         "subsemigroup",
         "subsemigroups",
         "supremum",
