--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "abelian",
+        "Anticommutator",
         "Bézout",
         "Biconditional",
         "bijections",
@@ -8,7 +9,13 @@
         "cancellative",
         "communitative",
         "compositon",
+        "Debye",
+        "Debye's",
+        "Deepseek",
         "eigen",
+        "eigenket",
+        "eigenkets",
+        "eigenstate",
         "equipotent",
         "Haha",
         "Hamitonian",
@@ -20,15 +27,19 @@
         "injectivity",
         "Irreflexivity",
         "isomonophism",
+        "kets",
         "Knaster",
         "monoid",
         "monoids",
         "multiplicatively",
         "multivalued",
         "Neille",
+        "nondegenerate",
         "parametrised",
+        "Poission",
         "Preimage",
         "preimages",
+        "Sakurai's",
         "semigroup",
         "semigroups",
         "submonoid",
