--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
         "eigenkets",
         "eigenstate",
         "equipotent",
+        "Fréchet",
         "Haha",
         "Hamitonian",
         "Homomophism",
@@ -39,6 +40,7 @@
         "Poission",
         "Preimage",
         "preimages",
+        "pseudometric",
         "Sakurai's",
         "semigroup",
         "semigroups",
