--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
         "eigenket",
         "eigenkets",
         "eigenstate",
+        "eigenstates",
         "equipotent",
         "Fréchet",
         "Haha",
