--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "Debye",
         "Debye's",
         "Deepseek",
+        "Drehung",
         "eigen",
         "eigenket",
         "eigenkets",
@@ -31,6 +32,7 @@
         "isomonophism",
         "kets",
         "Knaster",
+        "Lamé",
         "monoid",
         "monoids",
         "multiplicatively",
