--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,6 +47,7 @@
         "Sakurai's",
         "semigroup",
         "semigroups",
+        "semimetric",
         "submonoid",
         "submonoids",
         "subring",
