--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,6 +33,7 @@
         "kets",
         "Knaster",
         "Lamé",
+        "Lipschitzian",
         "monoid",
         "monoids",
         "multiplicatively",
@@ -48,6 +49,8 @@
         "semigroup",
         "semigroups",
         "semimetric",
+        "seminorm",
+        "seminormed",
         "submonoid",
         "submonoids",
         "subring",
@@ -58,6 +61,7 @@
         "surjective",
         "Surjectivity",
         "Tarski",
+        "ultrametric",
         "wavefunction",
         "Yigeng",
         "Zhao"
