--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "bijections",
         "bijective",
         "cancellative",
+        "Clebsch",
         "communitative",
         "compositon",
         "Debye",
@@ -20,11 +21,14 @@
         "eigenstates",
         "equipotent",
         "Fréchet",
+        "Gordan",
         "Haha",
         "Hamitonian",
         "Homomophism",
         "homomophisms",
         "Huayi",
+        "hypergeometric",
+        "ifundefined",
         "infimum",
         "injective",
         "injectivity",
@@ -51,6 +55,7 @@
         "semimetric",
         "seminorm",
         "seminormed",
+        "seminorms",
         "submonoid",
         "submonoids",
         "subring",
