--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,6 +56,7 @@
         "seminorm",
         "seminormed",
         "seminorms",
+        "subcover",
         "submonoid",
         "submonoids",
         "subring",
