--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
         "eigenstates",
         "equipotent",
         "Fréchet",
+        "Fubini",
         "Gordan",
         "Haha",
         "Hamitonian",
@@ -67,6 +68,7 @@
         "surjective",
         "Surjectivity",
         "Tarski",
+        "Tychonoff",
         "ultrametric",
         "wavefunction",
         "Yigeng",
