--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
         "Fréchet",
         "Fubini",
         "Gordan",
+        "Gronwall's",
         "Haha",
         "Hamitonian",
         "Homomophism",
@@ -50,6 +51,7 @@
         "Preimage",
         "preimages",
         "pseudometric",
+        "Rolle's",
         "Sakurai's",
         "semigroup",
         "semigroups",
