--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "Debye",
         "Debye's",
         "Deepseek",
+        "diffeomorphism",
         "Drehung",
         "eigen",
         "eigenket",
