--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "Deepseek",
         "diffeomorphism",
         "Drehung",
+        "Eckart",
         "eigen",
         "eigenket",
         "eigenkets",
