--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,7 @@
         "Gronwall's",
         "Haha",
         "Hamitonian",
+        "Hankel",
         "Homomophism",
         "homomophisms",
         "Huayi",
